<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_ip"
        android:inputType="phone"
        android:key="@string/pref_key_ip"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ip" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_ws"
        android:inputType="phone"
        android:key="@string/pref_key_ws"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ws" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_cam_sock"
        android:inputType="phone"
        android:key="@string/pref_key_cam_sock"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_cam_sock" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_control_mode_titles"
        android:entryValues="@array/pref_control_mode_values"
        android:key="@string/pref_key_control_mode"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_control_modes" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_max_vel"
        android:inputType="phone"
        android:key="@string/pref_key_max_vel"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_max_vel" />

</PreferenceScreen>
